--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ rules:
       headers:
         Content-Type: application/json
         Cache-Control: no-cache
-        X-Powered-By: http-mock-servie
+        X-Powered-By: http-mock-service
       body: |
         {
             "product_id": "12345",
@@ -36,7 +36,7 @@ rules:
       headers:
         Content-Type: application/xml
         Cache-Control: no-cache
-        X-Powered-By: http-mock-servie
+        X-Powered-By: http-mock-service
       body: |
         <product>
           <product_id>12345</product_id>
